2009-02-10  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/pluginload.c (plugins_reload_from_dir): Add support for
	multiple, colon-separated include_folders in the preferences.

2009-02-10  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/control, packaging/debian/changelog,
	packaging/debian/openvas-server.templates, packaging/debian/po/gl.po,
	packaging/debian/po/cs.po, packaging/debian/po/pt_BR.po,
	packaging/debian/po/es.po, packaging/debian/po/fr.po,
	packaging/debian/po/eu.po, packaging/debian/po/nl.po,
	packaging/debian/po/sk.po, packaging/debian/po/vi.po,
	packaging/debian/po/templates.pot, packaging/debian/po/pt.po,
	packaging/debian/po/ru.po, packaging/debian/po/sv.po,
	packaging/debian/po/de.po: Updated following translation efforts
	by debian-l10n-english team as part of the Smith review project.

2009-02-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Documentation and reformatting of shared_socket module.
	
	* openvasd/shared_socket.c: Donated return types in function
	declarations an own line, removed whitespaces, minor documentation.
	
	* openvasd/shared_socket.c (openvasd_shared_socket_acquire):
	Reformatted.

2009-02-06  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/preferences.c (preferences_new): Added default for
	config parameter "include_folders". It is set
	to the plugins_folder to be compatible by default
	with older version of openvasd.

	* openvasd/pluginload.c: Added include for nasl.h.
	(plugins_reload_from_dir): Initialize include paths.

2009-02-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Basic support for glob-style pattern definitions within the 
	hostname --> sshlogin mapping.
	(CR #20, http://www.openvas.org/openvas-cr-20.html)
	
	* openvasd/attack.c (is_pattern): New, copied from clients
	nvt_pref_sshlogin, TRUE if string contains '*' or '?'.
	
	* openvasd/attack.c (pattern_matches): New, GHashTable- find- predicate.
	